add new feature login and register.