@@ -1,98 +1,159 @@
 package com.example.demo.service;
 
+import com.example.demo.dto.ImageResponse;
+import com.example.demo.dto.ImageUploadResponse;
+import com.example.demo.dto.storage.StorageUploadResponse;
+import com.example.demo.exception.ResourceNotFoundException;
+import com.example.demo.exception.UnauthorizedOperationException;
+import com.example.demo.mapper.ImageMapper;
+import com.example.demo.service.dashboard.DashboardService;
+import com.example.demo.service.storage.StorageService;
+import com.example.demo.util.MessageConstants;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import software.amazon.awssdk.core.ResponseBytes;
-import software.amazon.awssdk.core.sync.RequestBody;
-import software.amazon.awssdk.services.s3.S3Client;
-import software.amazon.awssdk.services.s3.model.*;
 import com.example.demo.dto.DashboardStatsDto;
+import software.amazon.awssdk.services.s3.S3Client;
+import com.example.demo.entity.ImageMetadata;
+import com.example.demo.entity.User;
+import com.example.demo.repo.UserRepository;
+import com.example.demo.service.metadata.MetadataService;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 
+import java.time.LocalDateTime;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import java.io.IOException;
 import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ImageUploadServiceImpl implements ImageUploadService {
 
-    @Autowired
-    private S3Client s3Client;
+    private static final Logger logger =
+            LoggerFactory.getLogger(ImageUploadServiceImpl.class);
 
-    @Value("${aws.bucket-name}")
-    private String bucketName;
-    @Value("${aws.region}")
-    private String region;
+    @Autowired
+    private StorageService storageService;
+
+    @Autowired
+    private MetadataService metadataService;
+
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
+    private DashboardService dashboardService;
+
+    @Autowired
+    private ImageMapper imageMapper;
 
     @Override
-    public String imageUpload(MultipartFile file) throws IOException {
+    public ImageUploadResponse imageUpload(MultipartFile file) throws IOException {
 
-        String fileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
+        // Upload file to S3
+        StorageUploadResponse response =
+                storageService.upload(file);
 
-        PutObjectRequest request =
-                PutObjectRequest.builder().bucket(bucketName).key(fileName).contentType(file.getContentType()).build();
+        // Get logged-in user's email
+        Authentication authentication =
+                SecurityContextHolder.getContext().getAuthentication();
 
-        s3Client.putObject(request, RequestBody.fromBytes(file.getBytes()));
-        return fileName;
+        String email = authentication.getName();
+
+        // Find user
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new ResourceNotFoundException(MessageConstants.USER_NOT_FOUND));
+
+        // Create metadata
+        ImageMetadata metadata = new ImageMetadata();
+
+        metadata.setOriginalFileName(file.getOriginalFilename());
+
+        metadata.setS3Key(response.getKey());
+
+        metadata.setImageUrl(response.getUrl());
+
+        metadata.setFileSize(file.getSize());
+
+        metadata.setContentType(file.getContentType());
+
+        metadata.setUploadedAt(LocalDateTime.now());
+
+        metadata.setUser(user);
+
+        // Save to PostgreSQL
+        ImageMetadata savedMetadata = metadataService.save(metadata);
+        logger.info(
+                "User '{}' uploaded image '{}'",
+                user.getEmail(),
+                metadata.getOriginalFileName());
+
+        return imageMapper.toUploadResponse(savedMetadata);
     }
 
     @Override
     public byte[] download(String fileName) {
-        GetObjectRequest reuest = GetObjectRequest.builder().bucket(bucketName).key(fileName).build();
-
-        ResponseBytes<GetObjectResponse> responce = s3Client.getObjectAsBytes(reuest);
-
-        return responce.asByteArray();
+        return storageService.download(fileName);
     }
 
     @Override
     public void delete(String fileName) {
-        DeleteObjectRequest reuest = DeleteObjectRequest.builder().bucket(bucketName).key(fileName).build();
-        s3Client.deleteObject(reuest);
+        User loggedInUser = getLoggedInUser();
 
+        ImageMetadata metadata =
+                metadataService.findByS3Key(fileName)
+                        .orElseThrow(() ->
+                                new ResourceNotFoundException(MessageConstants.IMAGE_NOT_FOUND));
+
+        if (!metadata.getUser().getId().equals(loggedInUser.getId())) {
+
+            throw new UnauthorizedOperationException(MessageConstants.UNAUTHORIZED_DELETE);
+
+        }
+
+        storageService.delete(fileName);
+
+        metadataService.delete(metadata);
+        logger.info(
+                "User '{}' deleted image '{}'",
+                loggedInUser.getEmail(),
+                metadata.getOriginalFileName());
     }
 
     @Override
-    public List<String> getAllImages() {
-        ListObjectsV2Request request = ListObjectsV2Request.builder().bucket(bucketName).build();
+    public List<ImageResponse> getAllImages() {
 
-        ListObjectsV2Response response = s3Client.listObjectsV2(request);
-        return response.contents()
+        User user = getLoggedInUser();
+
+        return metadataService.findByUser(user)
                 .stream()
-                .map(obj -> String.format(
-                        "https://%s.s3.%s.amazonaws.com/%s",
-                        bucketName,
-                        region,
-                        obj.key()))
-                .collect(Collectors.toList());
+                .map(imageMapper::toImageResponse)
+                .toList();
+
     }
 
     @Override
     public DashboardStatsDto getDashboardStats() {
 
-        ListObjectsV2Request request =
-                ListObjectsV2Request.builder()
-                        .bucket(bucketName)
-                        .build();
+        User user = getLoggedInUser();
 
-        ListObjectsV2Response response =
-                s3Client.listObjectsV2(request);
+        return dashboardService.getDashboardStats(user);
 
-        DashboardStatsDto dto =
-                new DashboardStatsDto();
+    }
 
-        dto.setTotalImages(response.contents().size());
+    private User getLoggedInUser() {
 
-        long totalSize = response.contents()
-                .stream()
-                .mapToLong(S3Object::size)
-                .sum();
+        Authentication authentication =
+                SecurityContextHolder
+                        .getContext()
+                        .getAuthentication();
 
-        dto.setTotalStorage(totalSize);
+        String email = authentication.getName();
 
-        return dto;
-
+        return userRepository
+                .findByEmail(email)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(MessageConstants.USER_NOT_FOUND));
     }
 }
